return cursored offline message records